# cpp

./: CMakeLists.txt  Doxyfile  README.md
data/: clienti.txt  dipendenti.txt  prodotti.txt
include/: header.hpp
src/: main.cpp  source.cpp
test/: test.cpp
